--- a/package.json
+++ b/package.json
@@ -98,5 +98,5 @@
 			"path": "./node_modules/cz-conventional-changelog"
 		}
 	},
-	"homepage": "./"
+	"homepage": "https://buc-a.github.io/votingPlatform"
 }
