--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ permissions:
   id-token: write # Разрешаем использовать GITHUB_TOKEN
 
 env:
-  PUBLIC_PATH: /votingPlatform/
-  
+  PUBLIC_PATH: /voting/
+
 jobs: # Секция jobs определяет этапы процесса
  
   deploy:  # Создаётся одна задача deploy, имя может быть любым
