--- a/package.json
+++ b/package.json
@@ -81,11 +81,13 @@
 		]
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.8.2",
 		"clsx": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-modal": "^3.16.3",
 		"react-model": "^4.3.1",
+		"react-redux": "^9.2.0",
 		"react-router-dom": "^7.6.0"
 	},
 	"lint-staged": {
